--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -32,6 +32,8 @@
 
 <script src="/js/cleave-js/cleave.min.js"></script>
 
+<script src="/js/select2/js/select2.min.js"></script>
+
 <script>
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
@@ -967,6 +969,12 @@
             document.getElementById("searchList").style.display = "none";
         }
     }   
+</script>
+
+<script>
+    $(document).ready(function() {
+        $('.js-multiple').select2();
+    });   
 </script>
 
 <script>
