--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -33,6 +33,8 @@
     <link href="/css/animate.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 
+    <link href="/js/select2/css/select2.min.css" rel="stylesheet"/>
+
 </head>
 
 <body>
