Arreglos de modulos de polizas individual y colectivo y reportes

--- a/src/views/healthPolicyForm.ejs
+++ b/src/views/healthPolicyForm.ejs
@@ -149,12 +149,10 @@
                                         <div class="form-group" id="searchList" style="display:none">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Agentes Propios</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control js-multiple" name="nombre_agentes_propios" style="width: 100%" multiple>
+                                                    <select class="form-control" name="nombre_agentes_propios">
+                                                        <option value="">Seleccione</option>
                                                         <% ownAgents.forEach((ownAgent) => { %>
                                                             <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
-                                                        <% }); %>
-                                                        <% executives.forEach((executive) => { %>
-                                                            <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
                                                         <% }); %>
                                                     </select>
                                                 </div>
@@ -188,7 +186,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos de Suscripción</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control js-multiple" name="nombre_ejecutivos_suscripcion" style="width: 100%" multiple required>
+                                                    <select class="form-control" name="nombre_ejecutivos_suscripcion" required>
+                                                        <option value="">Seleccione *</option>
                                                         <% executives.forEach((executive) => { %>
                                                             <% if (executive.tipo_ejecutivo === 'SUSCRIPCIÓN') { %>
                                                                 <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
@@ -201,7 +200,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos de Siniestros</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control js-multiple" name="nombre_ejecutivos_siniestros" style="width: 100%" multiple required>
+                                                    <select class="form-control" name="nombre_ejecutivos_siniestros" required>
+                                                        <option value="">Seleccione *</option>
                                                         <% executives.forEach((executive) => { %>
                                                             <% if (executive.tipo_ejecutivo === 'SINIESTROS') { %>
                                                                 <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
@@ -358,7 +358,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos de Cobranzas</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control js-multiple" name="nombre_ejecutivos_cobranzas" style="width: 100%" multiple required>
+                                                    <select class="form-control" name="nombre_ejecutivos_cobranzas" required>
+                                                        <option value="">Seleccione *</option>
                                                         <% executives.forEach((executive) => { %>
                                                             <% if (executive.tipo_ejecutivo === 'COBRANZAS') { %>
                                                                 <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
