Agregado mensaje para deshabilitar y arreglado orden de campos en el formulario de polizas en los modulo de individual y colectivo

--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -75,7 +75,7 @@
                                                 name="porcentaje_agente_propio"
                                                 id="porcentaje_agente_propio" 
                                                 value="<%= porcentajeAgentePropio %>" 
-                                                class="form-control number_format"
+                                                class="form-control porcentaje_comision"
                                             >
                                         </div>
                                     </div>
