--- a/src/views/insurers.ejs
+++ b/src/views/insurers.ejs
@@ -147,7 +147,8 @@ $(document).ready(function(){
                                             <button 
                                                 class="btn btn-danger" 
                                                 type="submit"
-                                            >
+                                                onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
+                                            >   
                                                 <i class="fa fa-ban"></i>
                                             </button>
                                         </div> 
