--- a/src/views/collectives.ejs
+++ b/src/views/collectives.ejs
@@ -172,6 +172,7 @@ $(document).ready(function(){
                                             <button 
                                                 class="btn btn-danger" 
                                                 type="submit"
+                                                onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
                                             >
                                                 <i class="fa fa-ban"></i>
                                             </button>
