--- a/src/views/layouts/footerExtraWizardForm.ejs
+++ b/src/views/layouts/footerExtraWizardForm.ejs
@@ -346,6 +346,15 @@
                 }, false); 
             }    
         });
+        $("#policy-form").on('keyup','.porcentaje_tasa',function(){
+            new Cleave('.porcentaje_tasa', {
+                numeral: true,
+                numeralDecimalMark: ',',
+                delimiter: '.',
+                prefix: '%',
+                tailPrefix: true
+            });    
+        });
         $("#extra-form").on('keyup','.number_format',function(){
             var separador = $(this);
             for (var i = 0 ; i < separador.length; i++) {
@@ -889,7 +898,7 @@
         } else if (getSelectValue === 'NO') {
             document.getElementById("searchinput2").style.display = "none";
         }
-    }   
+    }
 </script>
 
 <script>
@@ -900,7 +909,7 @@
         } else {
             document.getElementById("searchList").style.display = "none";
         }
-    }   
+    }
 </script>
 
 <script>
@@ -1306,6 +1315,7 @@
                                                     <button 
                                                         class="btn btn-danger" 
                                                         type="submit"
+                                                        onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
                                                     >
                                                         <i class="fa fa-ban"></i>
                                                     </button>
@@ -1386,6 +1396,7 @@
                                                     <button 
                                                         class="btn btn-danger" 
                                                         type="submit"
+                                                        onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
                                                     >
                                                         <i class="fa fa-ban"></i>
                                                     </button>
@@ -1466,6 +1477,7 @@
                                                     <button 
                                                         class="btn btn-danger" 
                                                         type="submit"
+                                                        onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
                                                     >
                                                         <i class="fa fa-ban"></i>
                                                     </button>
