--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -61,7 +61,7 @@
                             <li><a href="/sistema/insurers">Consultar Aseguradoras</a></li>
                             <li><a href="/sistema/add-own-agent">Agregar Agente Propio</a></li>
                             <li><a href="/sistema/own-agents">Consultar Agentes Propios</a></li>
-                            <li><a href="/sistema/add-executive">Agregar Ejecutivo</a></li>
+                            <li><a href="/sistema/add-executive">Agregar Ejecutivos</a></li>
                             <li><a href="/sistema/executives">Consultar Ejecutivos</a></li>
                         </ul>
                     </li>
