--- a/src/views/vehicles.ejs
+++ b/src/views/vehicles.ejs
@@ -165,6 +165,7 @@ $(document).ready(function(){
                                             <button 
                                                 class="btn btn-danger" 
                                                 type="submit"
+                                                onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
                                             >
                                                 <i class="fa fa-ban"></i>
                                             </button>
