--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -28,13 +28,21 @@
                             <div class="ibox">
                                 <div class="form-control">
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula</label>
-                                        <div class="col-sm-10">
+                                        <div class="col-sm-10 field">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select id="select_box">
+                                                        <option value="V">V</option>
+                                                        <option value="E">E</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="cedula_ejecutivo"
                                                 id="cedula_ejecutivo"
                                                 placeholder="Cédula *" 
-                                                class="form-control cedula"
+                                                class="form-control input-numeral-cedula"
                                                 required
                                             >
                                         </div>
