--- a/src/views/healthCollectiveForm.ejs
+++ b/src/views/healthCollectiveForm.ejs
@@ -48,6 +48,33 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tomador</label>
+                                                <div class="col-sm-9 field">
+                                                    <div class="numeral-selector selector">
+                                                        <div class="select-box-wrapper">
+                                                            <select id="select_box">
+                                                                <option value="V">V</option>
+                                                                <option value="E">E</option>
+                                                                <option value="J">J</option>
+                                                                <option value="G">G</option>
+                                                                <option value="I">I</option>
+                                                                <option value="F">F</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <input 
+                                                        type="text"
+                                                        name="id_rif_tomador"
+                                                        id="id_rif_tomador"
+                                                        onkeyup="pasarNombreTomador2();"
+                                                        placeholder="Cédula/Rif Tomador *" 
+                                                        class="form-control input-numeral"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Nombre/Razón</label>
                                                 <div class="col-sm-9">
                                                     <input 
@@ -57,22 +84,6 @@
                                                         placeholder="Nombre/Razón Social Tomador *" 
                                                         class="form-control"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tomador</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="text"
-                                                        name="id_rif_tomador"
-                                                        id="id_rif_tomador"
-                                                        onkeyup="pasarNombreTomador2();"
-                                                        placeholder="Cédula/Rif Tomador *" 
-                                                        class="form-control cedula_rif"
-                                                        oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
                                                 </div>
