--- a/src/views/insurerForm.ejs
+++ b/src/views/insurerForm.ejs
@@ -28,14 +28,23 @@
                             <div class="ibox">
                                 <div class="form-control">
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Rif</label>
-                                        <div class="col-sm-10">
+                                        <div class="col-sm-10 field">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select id="select_box">
+                                                        <option value="J">J</option>
+                                                        <option value="G">G</option>
+                                                        <option value="I">I</option>
+                                                        <option value="F">F</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="rif_aseguradora"
                                                 id="rif_aseguradora"
                                                 placeholder="Rif *" 
-                                                class="form-control"
-                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                class="form-control input-numeral-rif"
                                                 required
                                             >
                                         </div>
