--- a/src/views/layouts/footerExtraWizardForm.ejs
+++ b/src/views/layouts/footerExtraWizardForm.ejs
@@ -154,22 +154,6 @@
                 }
             });
         });
-        $("#policy-form").on('keyup','.cedula_rif',function(){
-            var separador = $(this);
-            for (var i = 0 ; i < separador.length; i++) {
-                separador[i].addEventListener('input', (e) => {
-                    var entrada = e.target.value.split(',');
-                    var parteEntera = entrada[0].replace(/\./g, '');
-                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
-                        var parteRif = entrada[0];
-                        e.target.value = parteRif;
-                    } else {
-                        e.target.value = salida;
-                    }
-                }, false); 
-            }    
-        });
         $("#extra-form").on('keyup','.cedula',function(){
             var separador = $(this);
             for (var i = 0 ; i < separador.length; i++) {
@@ -327,22 +311,6 @@
                     parteDecimal = entrada[1],
                     salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
                     e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
-                }, false); 
-            }    
-        });
-        $("#policy-form").on('keyup','.cedula_rif',function(){
-            var separador = $(this);
-            for (var i = 0 ; i < separador.length; i++) {
-                separador[i].addEventListener('input', (e) => {
-                    var entrada = e.target.value.split(',');
-                    var parteEntera = entrada[0].replace(/\./g, '');
-                    var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-                    if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
-                        var parteRif = entrada[0];
-                        e.target.value = parteRif;
-                    } else {
-                        e.target.value = salida;
-                    }
                 }, false); 
             }    
         });
@@ -729,6 +697,58 @@
         })
     </script>
 <% } %>
+
+<script>
+    $(document).ready(function () {
+        new Cleave('.input-numeral', {
+            numeral: true,
+            numeralDecimalMark: ',',
+            delimiter: '.'
+        });
+
+        $('#select_box').change(function(){
+            if ((this.value === 'V') || (this.value === 'E')) {
+                var cleaveNumeral = new Cleave('.input-numeral', {
+                    numeral: true,
+                    numeralDecimalMark: ',',
+                    delimiter: '.'
+                });
+                cleaveNumeral.setRawValue('');
+            } else {
+                var cleaveNumeral = new Cleave('.input-numeral', {
+                    numeral: true,
+                    numeralDecimalMark: '!',
+                    delimiter: ''
+                });
+                cleaveNumeral.setRawValue('');
+            }
+        });
+        
+        new Cleave('.input-numeral2', {
+            numeral: true,
+            numeralDecimalMark: ',',
+            delimiter: '.'
+        });
+
+        $('#select_box2').change(function(){
+            if ((this.value === 'V') || (this.value === 'E')) {
+                var cleaveNumeral = new Cleave('.input-numeral2', {
+                    numeral: true,
+                    numeralDecimalMark: ',',
+                    delimiter: '.'
+                });
+                cleaveNumeral.setRawValue('');
+            } else {
+                var cleaveNumeral = new Cleave('.input-numeral2', {
+                    numeral: true,
+                    numeralDecimalMark: '!',
+                    delimiter: ''
+                });
+                cleaveNumeral.setRawValue('');
+            }
+        });   
+    });
+</script>
 
 <script>
     window.addEventListener("load", function() {
