--- a/src/views/refundForm.ejs
+++ b/src/views/refundForm.ejs
@@ -54,29 +54,48 @@
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
-                                        <div class="col-sm-9">
+                                        <div class="col-sm-9 field">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select id="select_box">
+                                                        <option value="V">V</option>
+                                                        <option value="E">E</option>
+                                                        <option value="J">J</option>
+                                                        <option value="G">G</option>
+                                                        <option value="I">I</option>
+                                                        <option value="F">F</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="id_rif_asegurado"
                                                 id="id_rif_asegurado"
                                                 onkeyup="pasarNombreAsegurado();"
                                                 placeholder="Cédula/Rif del Titular *" 
-                                                class="form-control cedula_rif"
-                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
+                                                class="form-control input-numeral"
                                                 required
                                             >
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula</label>
-                                        <div class="col-sm-9">
+                                        <div class="col-sm-9 field">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select id="select_box">
+                                                        <option value="V">V</option>
+                                                        <option value="E">E</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="cedula_beneficiario"
                                                 id="cedula_beneficiario"
                                                 onkeyup="pasarNombreAsegurado();"
                                                 placeholder="Cédula del Beneficiario"
-                                                class="form-control cedula"
+                                                class="form-control input-numeral-cedula"
                                             >
                                         </div>
                                     </div>
