--- a/src/views/userForm.ejs
+++ b/src/views/userForm.ejs
@@ -28,14 +28,25 @@
                             <div class="ibox">
                                 <div class="form-control">
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
-                                        <div class="col-sm-10">
+                                        <div class="col-sm-10 field">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select id="select_box">
+                                                        <option value="V">V</option>
+                                                        <option value="E">E</option>
+                                                        <option value="J">J</option>
+                                                        <option value="G">G</option>
+                                                        <option value="I">I</option>
+                                                        <option value="F">F</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="id_rif"
                                                 id="id_rif"
                                                 placeholder="Cédula/Rif *" 
-                                                class="form-control cedula_rif"
-                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                class="form-control input-numeral"
                                                 required
                                             >
                                         </div>
